--- a/text.html
+++ b/text.html
@@ -34,9 +34,8 @@
     <button class="button buttonround" type='button' style='background-color: lime'onclick=(window.location=(href='/text.html'))>Games</button>
     </header>
     <button style="background-image:url('https://cdn.glitch.global/ee13f082-b33e-4571-b561-a197411eec57/download%20(1).jpg?v=1684327863761');"class="gamebutton mario" type='button' style=; onclick=(window.location=(href='/iframeMario.html')) ></button>
-    <button style="background-image:url('https://cdn.glitch.global/ee13f082-b33e-4571-b561-a197411eec57/download%20(2).jpg?v=1684424364169;"class="gamebutton mario" type='button' style=; onclick=(window.location=(href='/iframeAmongUs.html')) ></button>.
-    <button style="background-image:url(';"class="gamebutton mario" type='button' style=; onclick=(window.location=(href='/iframeArtClass.html')) ></button>
-     <style>
+    <button style="background-image:url('https://cdn.glitch.global/ee13f082-b33e-4571-b561-a197411eec57/download%20(2).jpg?v=1684424364169;"class="gamebutton mario" type='button' style=; onclick=(window.location=(href='/iframeAmongUs.html')) ></button>
+    <style>
       body {
         background-image: url("https://cdn.glitch.global/ee13f082-b33e-4571-b561-a197411eec57/download%20(1).jpg?v=1684422752101");
         background-color: #cccccc;
